--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,9 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 2.8.3)
 project(lslidar_description)
 
-find_package(ament_cmake REQUIRED)
+catkin_package()
 
-# Install files
-install(DIRECTORY
-        meshes
-        urdf
-        DESTINATION share/${PROJECT_NAME})
-
-ament_package()
+install(
+  DIRECTORY meshes urdf
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
